--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ yarn_mappings=1.16.5+build.10
 loader_version=0.13.1
 
 # Mod Properties
-maven_group = org.example
-archives_base_name = modid
+maven_group = work.lclpnet.mods
+archives_base_name = mcct
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
