--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,7 @@ loader_version=0.13.1
 # Mod Properties
 maven_group = work.lclpnet.mods
 archives_base_name = mcct
+
+# Dependencies
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.42.0+1.16
